# sazed-mcp

./: .env.example  Dockerfile  README.md  client.py  config.py  docker-compose.yml  local-mcp-plan.md  pyproject.toml  server.py
